Implement Arrays.equals